Landing text aligned correctly.

--- a/src/styles/_landing.sass
+++ b/src/styles/_landing.sass
@@ -4,7 +4,7 @@
   line-height: 1
   height: 100px
   // justify-content: space-around
-  align-items: left
+  // align-items: left
   flex-direction: column
   @media (max-width: 600px)
     width: 100%
@@ -16,19 +16,32 @@
   @media (min-width: 1100px)
     width: 40%
 
-
 .landing-image
-    width: 100%
-    height: 700px
-    background-size: cover
-    background-position: center
-    background-color: rgba(211, 210, 210, 0.404)
-    display: flex
-    // justify-content: center
-    align-items: center
-    @media (max-width: 600px)
-      height: 600px
-      justify-content: center
+  width: 100vw
+  height: 700px
+  position: relative
+  left: 50%
+  right: 50%
+  margin: 2em -50vw
+  background-size: cover
+  background-position: center
+  display: flex
+  align-items: center
+  @media (max-width: 600px)
+    height: 600px
+
+// .landing-image
+//     width: 100%
+//     height: 700px
+//     background-size: cover
+//     background-position: center
+//     background-color: rgba(211, 210, 210, 0.404)
+//     display: flex
+//     // justify-content: center
+//     align-items: center
+//     @media (max-width: 600px)
+//       height: 600px
+//       justify-content: center
 
 
 .section-class
